--- a/node_application/foundation_wb/test.html
+++ b/node_application/foundation_wb/test.html
@@ -8,39 +8,40 @@
 			/*margin: 20px;*/
 			margin: 0;
 		}
-		.canvas-wrap{
+
+		.canvas-wrap {
 			width: 550px;
 			height: 550px;
 		}
+
 		canvas {
 			top: 20px;
 			left: 20px;
 			border: 5px solid #ccc;
 		}
+
 		#button {
 			position: relative;
 			top: -55px;
-			left: 345px;
+			left: 260px;
 		}
-		#save {
+
+		.buttons {
 			font-size: 120%;
 			width: 80px;
 			height: 50px;
 		}
-		#clear {
-			font-size: 120%;
-			width: 80px;
-			height: 50px;
-		}
+
 		ul {
 			margin: 0;
 			padding: 0;
 			list-style: none;
 		}
+
 		li {
-			cursor:pointer;
-			cursor:hand;
-			display:inline-block;
+			cursor: pointer;
+			cursor: hand;
+			display: inline-block;
 			border: 1px solid #000;
 			width: 50px;
 			height: 50px;
@@ -64,15 +65,16 @@
 		<input type="button" id="pen-size_large" value="10px">
 	</div>
 	<div id="button">
-		<input type="button" id="save" value="保存" />
-		<input type="button" id="clear" value="消去" />
+		<input type="button" class="buttons" id="load" value="読込"/>
+		<input type="button" class="buttons" id="save" value="保存"/>
+		<input type="button" class="buttons" id="clear" value="消去"/>
 	</div>
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 <!--<script src="/socket.io/socket.io.js"></script>-->
 <script type="text/javascript">
-	$(function() {
+	$(function () {
 		var offset = 5;
 		var fromX;
 		var fromY;
@@ -98,46 +100,59 @@
 //			context.clearRect(0, 0, $('canvas').width(), $('canvas').height());
 //		});
 
-		$('canvas').mousedown(function(e) {
+		$('#load').click(function (e) {
+			e.preventDefault();
+
+			var img = new Image();
+			var timestamp = new Date().getTime();
+
+			img.src = "http:///njr-sys.net/node_application/foundation_wb/test.png?" + timestamp;
+			img.onload = function () {
+				context.clearRect(0, 0, $('canvas').width(), $('canvas').height());
+				context.drawImage(img, 0, 0);
+			};
+		});
+
+		$('canvas').mousedown(function (e) {
 			drawFlag = true;
 			fromX = e.pageX - $(this).offset().left - offset;
 			fromY = e.pageY - $(this).offset().top - offset;
 			return false;  // for chrome
 		});
 
-		$('canvas').mousemove(function(e) {
+		$('canvas').mousemove(function (e) {
 			if (drawFlag) {
 				draw(e);
 			}
 		});
 
-		$('canvas').on('mouseup', function() {
+		$('canvas').on('mouseup', function () {
 			drawFlag = false;
 		});
 
-		$('canvas').on('mouseleave', function() {
+		$('canvas').on('mouseleave', function () {
 			drawFlag = false;
 		});
 
-		$('li').click(function() {
+		$('li').click(function () {
 			context.strokeStyle = $(this).css('background-color');
 		});
 
-		$('#clear').click(function(e) {
+		$('#clear').click(function (e) {
 //			socket.emit('clear send');
 			e.preventDefault();
 			context.clearRect(0, 0, $('canvas').width(), $('canvas').height());
 		});
 
-		$('#pen-size_small').click(function(e) {
+		$('#pen-size_small').click(function (e) {
 			e.preventDefault();
 			context.lineWidth = 1;
 		});
-		$('#pen-size_medium').click(function(e) {
+		$('#pen-size_medium').click(function (e) {
 			e.preventDefault();
 			context.lineWidth = 5;
 		});
-		$('#pen-size_large').click(function(e) {
+		$('#pen-size_large').click(function (e) {
 			e.preventDefault();
 			context.lineWidth = 10;
 		});
@@ -159,11 +174,40 @@
 			fromY = toY;
 		}
 
-		$('#save').click(function() {
+		$('#save').click(function () {
 			var d = $("canvas")[0].toDataURL("image/png");
-			console.log(d);
-//			d = d.replace("image/png", "image/octet-stream");
-//			window.open(d,"save");
+
+			var data = {
+				id: '1',
+				data: d
+			};
+			$.ajax({
+				type: 'POST',
+				url: 'http://njr-sys.net/api/saveWhiteBoard',
+				data: data,
+//				scriptCharset: 'utf-8',
+				success: function (data, dataType) {
+					alert("saved - njr-sys.net");
+					console.log(data);
+				},
+				error: function (XMLHttpRequest, textStatus, errorThrown) {
+					alert("error - njr-sys.net");
+					console.log('通信失敗 ' + errorThrown);
+				},
+				complete: function () {
+					console.log('処理終了');
+				}
+			});
+			return false;
+//
+//			//スクリプトタグ生成
+//			var sc = document.createElement("script");
+//			sc.type = 'text/javascript';
+//			//アクセス先を指定
+//			sc.src = "//example.com/api/getData.php?key=xxx&callback=callbackFunc";
+//			//生成したスクリプトタグを追加、実行
+//			var parent = document.getElementsByTagName("script")[0];
+//			parent.parentNode.insertBefore(sc,parent);
 		});
 	});
 </script>
